--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,6 +12,11 @@ html
 body
   margin: 0
   padding: 0
+  font-family: 'CynthoNext-Light', sans-serif
+  font-size: 14px
+  font-style: normal
+  font-weight: 300
+  color: #000000
   &.no-scroll
   	overflow: hidden
 h1, h2, h3, h4, p
