--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,19 +7,4 @@
 
 @import 'templates/header'
 @import 'templates/hero'
-@import 'templates/for'
-@import 'templates/help'
-@import 'templates/algorithm'
-@import 'templates/effic'
-@import 'templates/howview'
-@import 'templates/faq'
-@import 'templates/reviews'
-@import 'templates/buy'
-@import 'templates/popup'
-@import 'templates/stress'
-@import 'templates/topic'
-@import 'templates/contacts'
-@import 'templates/map'
-@import 'templates/footer'
-@import 'templates/article'
-@import 'templates/document'
+@import 'templates/popup-menu'
